--- a/config.cfg
+++ b/config.cfg
@@ -14,7 +14,7 @@ nb_classes  = 27
 
 [path]
 # name of the directory where the models and weights will be saved
-model_name = CNN3D_Lite
+model_name = RESNET3D
 # root folder containing the data
 data_root  = /home/ubuntu/gesture-recognition/
 # name of the directory that will contain the models
