--- a/gesture-control/mapping.ini
+++ b/gesture-control/mapping.ini
@@ -1,5 +1,5 @@
 [MAPPING]
-Stop Sign = press,space
+Thumb Up = press,space
 ; Swiping Up = cmd,up
 ; Swiping Down = cmd,down
 ; Turning Hand Clockwise = press,p
